docs(handoff): bring the handoff level with four finished stages
It described stage 2 finishing and stages 3 and 4 as unplanned. All four are
implemented, reviewed and green on three runners, and both pull requests are out
of draft, so a reader following it was being sent to a state that ended a day ago.

Also records what cost most of 2026-08-03, none of it in this work's code: a
conflicted pull request produces no CI run at all rather than a failing one --
which for fifteen hours looked exactly like a disabled repository; the macOS hang
in :falco-benchmarks:test that is skipped rather than diagnosed; the -2 objects
flake in ChunkFootprintTest and why a negative set cardinality says the two walks
disagreed rather than that the chunk shrank; and where deliberately accepted
japicmp breaks live and how they expire.

Two corrections a reader would have run into. The research report exists only in
the falco-bom worktree and on no branch with an open pull request -- the document
every design decision points back at is not on its way to main, and the handoff
now says so instead of naming a path that resolves to nothing here. And the entry
point is `./gradlew build`, not the per-module test tasks: a whole session ran the
latter and never saw checkApiCompatibility failing, because the tests are green
while the build is not.

Every path in the file was resolved against the working trees before committing.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NGpJqdmh7ZNH487GLqPJmK